# RingSnap

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
docs/: design.md  struct.md
public/: config.json
scripts/: sync-version.js
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: clipboard.rs  hotkey.rs  main.rs  rules.rs  window.rs
src/components/: IconLoader.vue  MenuItem.vue  RingMenu.vue  RuleEditor.vue
src/services/: iconCache.ts
src/stores/: config.ts  icon.ts
src/types/: index.ts
src/utils/: browser.ts  matcher.ts
