[package]
name = "ringsnap"
version = "0.1.0"
description = "A cross-platform text selection tool with ring menu"
authors = ["RingSnap Team"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "macos-private-api", "global-shortcut-all", "clipboard-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
arboard = "3.2"
once_cell = "1.19"
enigo = "0.2"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
